# Data-engineering-tools

./: .gitignore  Apache-kafka-project-darshil.md  Cartopy.ipynb  Flight_19_data.xlsx  README.md  fastapi_async.py  index.html  main.py  map.html  models.py  new_main.py  ref-Github-action.yml  test.ipynb  test_requests.py  utils.py  world-administrative-boundaries.shp
.devcontainer/: devcontainer.json
Bitbucket-ETL/: .gitignore  ETL-pipeline.py  ETL-process.ipynb  LICENSE.md  README.md  requirements.txt
Docker/: Dockerfile
FLask/: Readme.md  forms.py  main.py
Fake-data/: Diversity.ipynb  Unity in Diversity.docx  combined_workplace_diversity_dataset.xlsx  diversity_dataset-corrected.xlsx  random_names_dataset.xlsx  workplace_diversity_dataset.xlsx
Fake-data-GENERATION/: research_paper_Inclusion_and_diversity_at_workplace[1].docx
FastAPI MCQ Generator/: test-fastapi.py
Fastapi/: Project outline  Project-outline.md  README.md  main.py  pyproject.toml  test.ipynb
Fastapi/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
Fastapi/_build/html/.doctrees/: environment.pickle  index.doctree
Fastapi/_build/html/_sources/: index.rst.txt
Fastapi/_build/html/_static/: documentation_options.js
Fastapi/api/: __init__.py  auth.py  endpoints.py  models.py  utils.py
Fastapi/docs/source/: conf.py
Fastapi/source/: conf.py  index.rst
Flask-application/: app.py  app1.py
Kafka-streaming/: Makefile  consumer.py  docker-compose.yml  init.sh  large_tweets.json  live_dash.py  producer.py  requirements.txt
MCQ Generator/: README.md  main.py  questions_en.xlsx  requirements.txt
MCQ-Generator/: main.py  requirements.txt
MathLib/: Readme.md
Postgresql-database/: README.md
Python-logging-todo-list/: LICENCE  Readme.md  todo.py
Python-ui/datavista/: pyproject.toml
Python-ui/datavista/src/: main.py
Python-ui/datavista/src/ui/: custom_widgets.py  format.py  main_window.py
Rest-api-ecommerce-project/ecommerce_api/: README.md  pyproject.toml
Rest-api-ecommerce-project/ecommerce_api/app/: __init__.py  main.py
Rest-api-ecommerce-project/ecommerce_api/app/core/: config.py  security.py
Rest-api-ecommerce-project/ecommerce_api/app/db/: session.py
Rest-api-ecommerce-project/ecommerce_api/app/models/: products.py  user.py
Rest-api-ecommerce-project/ecommerce_api/app/routers/: auth.py  payments.py  products.py
Rest-api-ecommerce-project/ecommerce_api/app/schemas/: __init__.py  product.py  user.py
example-poetry-project/: .gitignore  README.md  pyproject.toml
example-poetry-project/poetry_demo/: README.md  pyproject.toml
example-poetry-project/src/my_project/: __init__.py
example-poetry-project/tests/: test_main.py
(+132 files in other folders)
