[tool.poetry]
name = "datavista"
version = "0.1.0"
description = "A modern Tkinter application for complex data analytics."
authors = ["Arun Kumar Pandey <arunp77@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"